--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,9 @@
     <artifactId>leetcode-report</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
 </project>
